# lumitide

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.cargo/: config.toml
.github/: RELEASE_NOTES.md  release.yml
.github/workflows/: ci.yml  release.yml
docs/: how-flac-works.md
installer/: lumitide.iss
src/: api.rs  auth.rs  banner.rs  color_state.rs  config.rs  cover.rs  download_queue.rs  library.rs  local.rs  main.rs  metadata.rs  mix.rs  panel.rs  playlist.rs  preview.rs  radio.rs  search.rs  spectrum.rs  utils.rs
tests/: cli.rs
