[package]
name = "lumitide"
version = "0.1.0"
edition = "2021"
description = "Console music player for Tidal"
license = "MIT"
repository = "https://github.com/yourusername/lumitide"

[[bin]]
name = "lumitide"
path = "src/main.rs"

[dependencies]
clap          = { version = "4",    features = ["derive"] }
reqwest       = { version = "0.12", features = ["blocking", "json", "stream"] }
serde         = { version = "1",    features = ["derive"] }
serde_json    = "1"
ratatui       = "0.29"
crossterm     = "0.28"
cpal          = "0.15"
symphonia     = { version = "0.5",  default-features = false, features = ["flac", "mp3", "aac", "isomp4"] }
lofty         = "0.22"
rustfft       = "6"
image         = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
anyhow        = "1"
chrono        = { version = "0.4",  features = ["serde"] }
dirs          = "5"
tempfile      = "3"
rand          = "0.8"
base64        = "0.22"
color_quant   = "1"
metaflac      = "0.2"
dialoguer     = "0.11"
rfd           = { version = "0.15", default-features = false, features = ["xdg-portal"] }
